Column sorting and bugfixes
This implements column sorting in all classes from views.lists.
For the sorting to work, some fixes were needed, e.g.:
- The tables setAutoCreateRowSorter() method is used. For it to work properly,
  the method getColumnClass() of the table's model must be properly implemented;
- The fillTable() method cannot use the models getDataVector().clear() method.
  Instead, the setRowCount(0) method must be used;
- To get the selected row correctly, the tables convertRowIndexToModel() method
  must be used, receiving as argument the selected row from the view;
- Methods that cause changes on objects that are used in the UI, such as search()
  and fillTable(), must be called using invokeLater().

For performance improvements, the getSortedList() method now returns a linked list.